// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridPagination /> for too many pages displays compact pagination controls 1`] = `
<nav
  className="rscgrid-pagination"
>
  <ul
    className="rscgrid-pagination__list"
  >
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={true}
        onClick={[Function]}
      >
        ❮
      </button>
    </li>
    <li
      key="0"
    >
      <button
        className="rscgrid-pagination__btn rscgrid-pagination__btn--current"
        onClick={[Function]}
      >
        1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        2
      </button>
    </li>
    <li
      key="2"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        3
      </button>
    </li>
    <li
      key="3"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        4
      </button>
    </li>
    <li
      key="4"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        5
      </button>
    </li>
    <li
      className="rscgrid-pagination__sep"
      key="5"
      role="separator"
    >
      ...
    </li>
    <li
      key="6"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        109
      </button>
    </li>
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❯
      </button>
    </li>
  </ul>
</nav>
`;

exports[`<GridPagination /> for too many pages displays compact pagination controls 2`] = `
<nav
  className="rscgrid-pagination"
>
  <ul
    className="rscgrid-pagination__list"
  >
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❮
      </button>
    </li>
    <li
      key="0"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        1
      </button>
    </li>
    <li
      className="rscgrid-pagination__sep"
      key="1"
      role="separator"
    >
      ...
    </li>
    <li
      key="2"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        53
      </button>
    </li>
    <li
      key="3"
    >
      <button
        className="rscgrid-pagination__btn rscgrid-pagination__btn--current"
        onClick={[Function]}
      >
        54
      </button>
    </li>
    <li
      key="4"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        55
      </button>
    </li>
    <li
      className="rscgrid-pagination__sep"
      key="5"
      role="separator"
    >
      ...
    </li>
    <li
      key="6"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        109
      </button>
    </li>
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❯
      </button>
    </li>
  </ul>
</nav>
`;

exports[`<GridPagination /> for too many pages displays compact pagination controls 3`] = `
<nav
  className="rscgrid-pagination"
>
  <ul
    className="rscgrid-pagination__list"
  >
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❮
      </button>
    </li>
    <li
      key="0"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        1
      </button>
    </li>
    <li
      className="rscgrid-pagination__sep"
      key="1"
      role="separator"
    >
      ...
    </li>
    <li
      key="2"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        5
      </button>
    </li>
    <li
      key="3"
    >
      <button
        className="rscgrid-pagination__btn rscgrid-pagination__btn--current"
        onClick={[Function]}
      >
        6
      </button>
    </li>
    <li
      key="4"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        7
      </button>
    </li>
    <li
      className="rscgrid-pagination__sep"
      key="5"
      role="separator"
    >
      ...
    </li>
    <li
      key="6"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        109
      </button>
    </li>
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❯
      </button>
    </li>
  </ul>
</nav>
`;

exports[`<GridPagination /> for too many pages displays compact pagination controls 4`] = `
<nav
  className="rscgrid-pagination"
>
  <ul
    className="rscgrid-pagination__list"
  >
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❮
      </button>
    </li>
    <li
      key="0"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        1
      </button>
    </li>
    <li
      className="rscgrid-pagination__sep"
      key="1"
      role="separator"
    >
      ...
    </li>
    <li
      key="2"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        105
      </button>
    </li>
    <li
      key="3"
    >
      <button
        className="rscgrid-pagination__btn rscgrid-pagination__btn--current"
        onClick={[Function]}
      >
        106
      </button>
    </li>
    <li
      key="4"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        107
      </button>
    </li>
    <li
      className="rscgrid-pagination__sep"
      key="5"
      role="separator"
    >
      ...
    </li>
    <li
      key="6"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        109
      </button>
    </li>
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❯
      </button>
    </li>
  </ul>
</nav>
`;

exports[`<GridPagination /> for too many pages displays compact pagination controls 5`] = `
<nav
  className="rscgrid-pagination"
>
  <ul
    className="rscgrid-pagination__list"
  >
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❮
      </button>
    </li>
    <li
      key="0"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        1
      </button>
    </li>
    <li
      className="rscgrid-pagination__sep"
      key="1"
      role="separator"
    >
      ...
    </li>
    <li
      key="2"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        106
      </button>
    </li>
    <li
      key="3"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        107
      </button>
    </li>
    <li
      key="4"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        108
      </button>
    </li>
    <li
      key="5"
    >
      <button
        className="rscgrid-pagination__btn rscgrid-pagination__btn--current"
        onClick={[Function]}
      >
        109
      </button>
    </li>
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={true}
        onClick={[Function]}
      >
        ❯
      </button>
    </li>
  </ul>
</nav>
`;

exports[`<GridPagination /> renders properly 1`] = `
<nav
  className="rscgrid-pagination"
>
  <ul
    className="rscgrid-pagination__list"
  >
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={true}
        onClick={[Function]}
      >
        ❮
      </button>
    </li>
    <li
      key="0"
    >
      <button
        className="rscgrid-pagination__btn rscgrid-pagination__btn--current"
        onClick={[Function]}
      >
        1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        2
      </button>
    </li>
    <li
      key="2"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        3
      </button>
    </li>
    <li
      key="3"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        4
      </button>
    </li>
    <li
      key="4"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        5
      </button>
    </li>
    <li
      key="5"
    >
      <button
        className="rscgrid-pagination__btn"
        onClick={[Function]}
      >
        6
      </button>
    </li>
    <li>
      <button
        className="rscgrid-pagination__btn"
        disabled={false}
        onClick={[Function]}
      >
        ❯
      </button>
    </li>
  </ul>
</nav>
`;
